@@ -130,7 +130,8 @@ public:
 	    clause_.clear();
 	}
     }
-    /// Assign a new set of conditions directly.
+    /// Assign a new set of conditions directly.  The new set of conditions
+    /// is copied here.
     void setExpr(const ibis::qExpr *ex) {
 	clause_.clear();
 	delete expr_;
